--- a/index.html
+++ b/index.html
@@ -6,9 +6,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influence Gear</title>
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/091221fe3d.js" crossorigin="anonymous"></script>
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;900&family=Poppins:wght@400;600;700&display=swap"
+        rel="stylesheet">
+    <!-- Style Sheet -->
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <!-- header Start -->
+    <header class="center-container">
+        <div class="container">
+            <div class="header">
+                <button class="menu_bar"><i class="fa-solid fa-bars"></i></button>
+                <!-- Logo -->
+                <div class="logo">
+                    <a href="#">Influencer products</a>
+                </div>
+                <!-- Navigation -->
+                <nav>
+                    <ul class="nav">
+                        <li><a href="#" class="active">Home</a></li>
+                        <li><a href="#">Products</a></li>
+                        <li><a href="#">Sign up</a></li>
+                        <li><a href="#">Log In</a></li>
+                        <li><a href="#"><i class="fa-solid fa-magnifying-glass"></i></a></li>
+                        <li><a href="#"><i class="fa-solid fa-cart-plus"></i></a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <!-- Header End -->
 
 </body>
 
