partner section complete

--- a/index.html
+++ b/index.html
@@ -44,6 +44,47 @@
     </header>
     <!-- Header End -->
 
+    <!-- Main Section Start -->
+    <main>
+
+        <!-- Banner Section Start -->
+        <section class="banner_section center-container">
+            <div class="container">
+                <div class="banner">
+                    <div class="banner-content">
+                        <h1 class="primary-header">Start your Journey as Influencer</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros.
+                            Lectus faucibus.</p>
+                        <a href="" class="btn-rounded">Preebook now <span><i
+                                    class="fa-solid fa-arrow-right-long"></i></span></a>
+                    </div>
+                    <div class="banner-image">
+                        <img src="images/main-camera.png" alt="Camera">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Banner Section End -->
+
+        <!-- Partner Section -->
+        <section class="partner-section center-container">
+            <div class="container">
+                <div class="partners">
+                    <a href="#" class="partner"><img src="images/logos/Alibaba.svg" alt=""></a>
+                    <a href="#" class="partner"><img src="images/logos/Amazon.svg" alt=""></a>
+                    <a href="#" class="partner"><img src="images/logos/Daraz.pk Logo.svg" alt=""></a>
+                    <a href="#" class="partner"><img src="images/logos/Ebay.svg" alt=""></a>
+                    <a href="#" class="partner"><img src="images/logos/Rakuten.svg" alt=""></a>
+                    <a href="#" class="partner"><img src="images/logos/Target.svg" alt=""></a>
+                    <a href="#" class="partner"><img src="images/logos/Walmart.svg" alt=""></a>
+                </div>
+            </div>
+        </section>
+        <!-- Partner Section End -->
+
+    </main>
+    <!-- Main Section End -->
+
 </body>
 
 </html>
