Collection Section Complete

--- a/index.html
+++ b/index.html
@@ -82,6 +82,224 @@
         </section>
         <!-- Partner Section End -->
 
+        <!-- Collection Start -->
+        <section class="collection-section center-container">
+            <div class="container">
+                <div class="collection-area">
+                    <h2 class="regular-header">Popular Collection</h2>
+                    <div class="collections">
+                        <div class="collection">
+                            <div class="collection-thumb">
+                                <img src="images/tripod.png" alt="">
+                            </div>
+                            <div class="collection-info">
+                                <h2>Flex Tripod</h2>
+                                <p class="price">$50.48</p>
+                                <p class="rating">
+                                    <span class="star">
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star-half-stroke color-gold"></i>
+                                    </span>
+                                    <span class="rate-number">4.99</span>
+                                </p>
+                                <p class="collection-details">Wordwide shifting available. <br> Buyers protection
+                                    possible!
+                                </p>
+
+                            </div>
+                        </div>
+                        <div class="collection">
+                            <div class="collection-thumb">
+                                <img src="images/airpod.png" alt="">
+                            </div>
+                            <div class="collection-info">
+                                <h2>Flex Tripod</h2>
+                                <p class="price">$50.48</p>
+                                <p class="rating">
+                                    <span class="star">
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star-half-stroke color-gold"></i>
+                                    </span>
+                                    <span class="rate-number">4.99</span>
+                                </p>
+                                <p class="collection-details">Wordwide shifting available Buyers protection possible!
+                                </p>
+
+                            </div>
+                        </div>
+                        <div class="collection">
+                            <div class="collection-thumb">
+                                <img src="images/drone.png" alt="">
+                            </div>
+                            <div class="collection-info">
+                                <h2>Flex Tripod</h2>
+                                <p class="price">$50.48</p>
+                                <p class="rating">
+                                    <span class="star">
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star-half-stroke color-gold"></i>
+                                    </span>
+                                    <span class="rate-number">4.99</span>
+                                </p>
+                                <p class="collection-details">Wordwide shifting available Buyers protection possible!
+                                </p>
+
+                            </div>
+                        </div>
+                        <div class="collection">
+                            <div class="collection-thumb">
+                                <img src="images/mic.png" alt="">
+                            </div>
+                            <div class="collection-info">
+                                <h2>Flex Tripod</h2>
+                                <p class="price">$50.48</p>
+                                <p class="rating">
+                                    <span class="star">
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star-half-stroke color-gold"></i>
+                                    </span>
+                                    <span class="rate-number">4.99</span>
+                                </p>
+                                <p class="collection-details">Wordwide shifting available Buyers protection possible!
+                                </p>
+
+                            </div>
+                        </div>
+                        <div class="collection">
+                            <div class="collection-thumb">
+                                <img src="images/single-light.png" alt="">
+                            </div>
+                            <div class="collection-info">
+                                <h2>Flex Tripod</h2>
+                                <p class="price">$50.48</p>
+                                <p class="rating">
+                                    <span class="star">
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star-half-stroke color-gold"></i>
+                                    </span>
+                                    <span class="rate-number">4.99</span>
+                                </p>
+                                <p class="collection-details">Wordwide shifting available Buyers protection possible!
+                                </p>
+
+                            </div>
+                        </div>
+                        <div class="collection">
+                            <div class="collection-thumb">
+                                <img src="images/gear.png" alt="">
+                            </div>
+                            <div class="collection-info">
+                                <h2>Flex Tripod</h2>
+                                <p class="price">$50.48</p>
+                                <p class="rating">
+                                    <span class="star">
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star-half-stroke color-gold"></i>
+                                    </span>
+                                    <span class="rate-number">4.99</span>
+                                </p>
+                                <p class="collection-details">Wordwide shifting available Buyers protection possible!
+                                </p>
+
+                            </div>
+                        </div>
+                        <div class="collection">
+                            <div class="collection-thumb">
+                                <img src="images/tripod.png" alt="">
+                            </div>
+                            <div class="collection-info">
+                                <h2>Flex Tripod</h2>
+                                <p class="price">$50.48</p>
+                                <p class="rating">
+                                    <span class="star">
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star-half-stroke color-gold"></i>
+                                    </span>
+                                    <span class="rate-number">4.99</span>
+                                </p>
+                                <p class="collection-details">Wordwide shifting available Buyers protection possible!
+                                </p>
+
+                            </div>
+                        </div>
+                        <div class="collection">
+                            <div class="collection-thumb">
+                                <img src="images/setup.png" alt="">
+                            </div>
+                            <div class="collection-info">
+                                <h2>Flex Tripod</h2>
+                                <p class="price">$50.48</p>
+                                <p class="rating">
+                                    <span class="star">
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star-half-stroke color-gold"></i>
+                                    </span>
+                                    <span class="rate-number">4.99</span>
+                                </p>
+                                <p class="collection-details">Wordwide shifting available Buyers protection possible!
+                                </p>
+
+                            </div>
+                        </div>
+                        <div class="collection">
+                            <div class="collection-thumb">
+                                <img src="images/camera.png" alt="">
+                            </div>
+                            <div class="collection-info">
+                                <h2>Flex Tripod</h2>
+                                <p class="price">$50.48</p>
+                                <p class="rating">
+                                    <span class="star">
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star color-gold"></i>
+                                        <i class="fa-solid fa-star-half-stroke color-gold"></i>
+                                    </span>
+                                    <span class="rate-number">4.99</span>
+                                </p>
+                                <p class="collection-details">Wordwide shifting available Buyers protection possible!
+                                </p>
+
+                            </div>
+                        </div>
+                    </div>
+                    <div class="pagination">
+                        <a href="#" class="page-link">
+                            See More <span><i class="fa-solid fa-arrow-right-long"></i></span>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Collection End -->
+
+        <!-- Feature Section -->
+
     </main>
     <!-- Main Section End -->
 
