--- a/index.html
+++ b/index.html
@@ -298,10 +298,43 @@
         </section>
         <!-- Collection End -->
 
-        <!-- Feature Section -->
-
+        <!-- Feature Section Start -->
+        <section class="feature-section center-container">
+            <div class="container">
+                <div class="features">
+                    <div class="feature-image">
+                        <img src="images/gear.png" alt="">
+                    </div>
+                    <div class="feature-info">
+                        <h2 class="secondary-header">Featured products at one place</h2>
+                        <p>Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia
+                            consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                        <a href="" class="btn">Join Now <span><i class="fa-solid fa-arrow-right-long"></i></span></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Feature Section End -->
     </main>
     <!-- Main Section End -->
+
+    <!-- Footer -->
+    <footer class="center-container">
+        <div class="container">
+            <div class="footer">
+                <h2 class="regular-header">Influencer products</h2>
+                <p>Copyright © 2020 influencer products</p>
+                <p>All rights reserved</p>
+                <ul class="footer-nav">
+                    <li><a href=""><i class="fa-brands fa-instagram"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-dribbble"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-twitter-square"></i></a></li>
+                    <li><a href=""><i class="fa-brands fa-youtube"></i></a></li>
+
+                </ul>
+            </div>
+        </div>
+    </footer>
 
 </body>
 
